--- a/app/src/main/res/layout/fragment_donation_list.xml
+++ b/app/src/main/res/layout/fragment_donation_list.xml
@@ -1,113 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/donations_list_Fragment_ll_sub_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/fragment_donation_list_shimmer" />
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/donations_list_Fragment_sr_refresh_donations"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/donations_list_Fragment_ll_sub_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <include layout="@layout/fragment_donation_list_shimmer" />
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/donations_list_Fragment_sr_refresh_donations"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dim_12dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    style="@style/text_input"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/dim_40dp"
-                    android:layout_marginEnd="@dimen/dim_8dp"
-                    android:layout_marginStart="@dimen/dim_8dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dim_12dp">
 
-                    <Spinner
-                        android:id="@+id/donations_list_Fragment_sp_blood_types"
-                        style="@style/spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal" />
+                    <LinearLayout
+                        style="@style/text_input"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/dim_40dp"
+                        android:layout_marginEnd="@dimen/dim_8dp"
+                        android:layout_marginStart="@dimen/dim_8dp"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
-                </LinearLayout>
+                        <Spinner
+                            android:id="@+id/donations_list_Fragment_sp_blood_types"
+                            style="@style/spinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_horizontal" />
 
-                <LinearLayout
-                    style="@style/text_input"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/dim_40dp"
-                    android:layout_marginEnd="@dimen/dim_8dp"
-                    android:layout_marginStart="@dimen/dim_4dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    </LinearLayout>
 
-                    <Spinner
-                        android:id="@+id/donations_list_Fragment_sp_government"
-                        style="@style/spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_horizontal" />
+                    <LinearLayout
+                        style="@style/text_input"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/dim_40dp"
+                        android:layout_marginEnd="@dimen/dim_8dp"
+                        android:layout_marginStart="@dimen/dim_4dp"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/donations_list_Fragment_sp_government"
+                            style="@style/spinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_horizontal" />
+
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="@dimen/dim_40dp"
+                        android:layout_height="@dimen/dim_40dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/dim_8dp">
+
+                        <ImageButton
+                            android:layout_width="@dimen/dim_40dp"
+                            android:layout_height="@dimen/dim_40dp"
+                            android:background="@drawable/shape_circil" />
+
+                        <ImageButton
+                            android:layout_width="@dimen/dim_40dp"
+                            android:layout_height="@dimen/dim_40dp"
+                            android:background="@null"
+                            android:src="@drawable/ic_search_solid" />
+
+                        <RelativeLayout
+                            android:id="@+id/donations_list_Fragment_rl_filter"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
+                    </RelativeLayout>
 
                 </LinearLayout>
 
                 <RelativeLayout
-                    android:layout_width="@dimen/dim_40dp"
-                    android:layout_height="@dimen/dim_40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/dim_8dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                    <ImageButton
-                        android:layout_width="@dimen/dim_40dp"
-                        android:layout_height="@dimen/dim_40dp"
-                        android:background="@drawable/shape_circil" />
-
-                    <ImageButton
-                        android:layout_width="@dimen/dim_40dp"
-                        android:layout_height="@dimen/dim_40dp"
-                        android:background="@null"
-                        android:src="@drawable/ic_search_solid" />
-
-                    <RelativeLayout
-                        android:id="@+id/donations_list_Fragment_rl_filter"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/donations_list_Fragment_rv_donations"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:layout_above="@+id/load_more"
+                        android:layout_marginTop="@dimen/dim_8dp" />
+
+                    <include
+                        layout="@layout/item_load_more"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true" />
+
+                    <include layout="@layout/error" />
 
                 </RelativeLayout>
 
+
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/donations_list_Fragment_rv_donations"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_above="@+id/load_more"
-                    android:layout_marginTop="@dimen/dim_8dp" />
+    </LinearLayout>
 
-                <include
-                    layout="@layout/item_load_more"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/donations_list_Fragment_f_a_btn_create_donations"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_plus_white" />
 
-                <include layout="@layout/error" />
-
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-</LinearLayout>
+</RelativeLayout>
